# Logger-project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Logger.h  LoggerCore.h
src/: Logger.cpp  LoggerCore.cpp  main.cpp
tests/: test_logger.cpp  test_logger_core.cpp
